fix(signup): style fixed for better spacing

--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -1,3 +1,7 @@
+.signup-form {
+    padding: 30px;
+}
+
 mat-form-field {
     width: 300px; //looks cool on pc and mobile
 }
